--- a/supervisor/manageMeetingSupervisor.html
+++ b/supervisor/manageMeetingSupervisor.html
@@ -203,7 +203,7 @@
 
         <ul class="list-unstyled components">
           <li>
-            <a href="addMeetingSupervisor.html">Add Meeting</a>
+            <a href="addMeetingSupervisor.html">Meeting Schedule</a>
           </li>
           <li class="active">
             <a href="#">Manage Meeting Records</a>
@@ -272,7 +272,11 @@
               </h2>
               <div id="controls">
                 <i class="icon-doc-text" id="createNote"
-                  ><img src="img/button.png" alt="Button" height="30" width="30"
+                  ><img
+                    src="../img/button.png"
+                    alt="Button"
+                    height="30"
+                    width="30"
                 /></i>
               </div>
             </div>
