--- a/supervisor/manageMeetingSupervisor.html
+++ b/supervisor/manageMeetingSupervisor.html
@@ -259,7 +259,7 @@
         </nav>
         <h1
           class="text-center mt-3 mb-3"
-          style="font-family: 'Mukta', sans-serif;color: #7BABED; font-size: 4vw;"
+          style="font-family: 'Mukta', sans-serif;color: #7BABED;"
         >
           Manage Meeting Records
         </h1>
