--- a/resetpassword.html
+++ b/resetpassword.html
@@ -23,6 +23,8 @@
       rel="stylesheet"
     />
 
+    <link rel="shortcut icon" href="favicon.ico" />
+
     <style>
       body {
         background-image: url("img/blueGradient1.png");
