fixed navigation for hosting

--- a/resetpassword.html
+++ b/resetpassword.html
@@ -215,10 +215,10 @@
                 //check if what response is
                 if (data["status"] === "success") {
                   alert(data["msg"]);
-                  location.href = "/um-rmms";
+                  location.href = "/";
                 } else {
                   alert(data["msg"]);
-                  location.href = "/um-rmms";
+                  location.href = "/";
                 }
               }
             });
